refactor: decodeOutpointValues returns an immutable list